feature(clean-code): Reformat code automatically with intellij.
This brings a lot of files that receive modification,
but keeping mixed space and tab seemed like a bad idea.